[fullscreen] fix(FullScreen, styles): added foregroundColor prop to the controls, increased z-index

--- a/packages/fullScreen/web/src/fullscreen.rtlignore.scss
+++ b/packages/fullScreen/web/src/fullscreen.rtlignore.scss
@@ -4,7 +4,7 @@
   left: 0;
   width: 100vw;
   height: 100vh;
-  z-index: 99;
+  z-index: 1000;
   background: rgba(0,0,0,1);
   transition: opacity 2s ease;
   visibility: visible;
@@ -13,7 +13,7 @@
 
 .close {
   box-sizing: content-box;
-  z-index: 100;
+  z-index: 1001;
   padding: 10px;
   position: fixed;
   right: 20px;
